Bug 233419 - Address line edit shows wrong resource name in completion popup
Summary: Address line edit shows wrong resource name in completion popup
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-04-05 21:09 UTC by Thomas McGuire
Modified: 2010-05-07 13:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-04-05 21:09:48 UTC
For testing, I created a VCard file test resource in KAddressbook. In Kaddressbook, it is shown as "test.vcard" in the address books list.

When I auto-complete an address in KMail from that resource, it shows "akonadi_vcard_resource_1". It should show "test.vcard".
Comment 1 Tobias Koenig 2010-05-07 13:28:10 UTC
SVN commit 1123927 by tokoe:

Show display name of resource if available

BUG: 233419


 M  +3 -1      addresseelineedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123927