Show display name of resource if available

BUG: 233419

svn path=/trunk/KDE/kdepim/; revision=1123927